# ChangeLog for net-im/kadu-word_fix
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*kadu-word_fix-0.6.5.4 (08 Feb 2010)

  08 Feb 2010; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-word_fix-0.6.5.4.ebuild:
  Bumped to Kadu 0.6.5.4.

  16 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-word_fix-0.6.5.4_rc1.ebuild:
  Removed Kadu 0.6.5.4_rc1.

*kadu-word_fix-0.6.5.4_rc2 (01 Jan 2010)

  01 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-word_fix-0.6.5.4_rc2.ebuild:
  Bumped.

  11 Dec 2009; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-word_fix-0.6.5.4_rc1.ebuild:
  Bumped.

  04 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> -kadu-word_fix-0.3.ebuild:
  Removing Kadu 0.6.0.* ebuilds.

  14 Sep 2009; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-word_fix-0.6.5.2.ebuild, +kadu-word_fix-0.6.5.3.ebuild:
  Bumped.

  03 May 2009; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-word_fix-0.6.5.1.ebuild, +kadu-word_fix-0.6.5.2.ebuild:
  Bumped. Removed previous version.

  25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> kadu-word_fix-0.3.ebuild,
  -kadu-word_fix-0.6.5.ebuild, +kadu-word_fix-0.6.5.1.ebuild, +metadata.xml:
  Bumped. Removed previous version. Some repoman fixes.

  08 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-word_fix-0.6.5_rc2.ebuild, +kadu-word_fix-0.6.5.ebuild:
  Bumped. Removed previous version.

  12 Nov 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-word_fix-0.6.5_rc2.ebuild:
  Bumped.

  06 Jun 2008; Michał Ziąbkowski <mziab@o2.pl> kadu-word_fix-0.3.ebuild:
  Bumped. Removed previous version.
