@@ -1,4 +1,6 @@
 DIST kadu-0.6.5.4.tar.bz2 1774602 RMD160 5656b87e02952e6d47159996c86919d5d16973e4 SHA1 afd5b7d6c1568a3db03328d58d5ba6506dfa410f SHA256 9decd7b9de6d91095b4f6b47bebbbbc5ca56b9ba6e8f6ee80d8ad172ba676d25
+DIST kadu-0.6.6-beta10.tar.bz2 2948812 RMD160 3ba301fbb5325e3aa4ed0592e7255060e5523d81 SHA1 81c679d3367e56edffd4114097cd51814d4c0bf9 SHA256 c791678299bd75558afb0134a8b9e2887f1daf498d5f5617ee98c8bce2159f06
 EBUILD kadu-word_fix-0.6.5.4.ebuild 271 RMD160 c2dec0153ab13d9a149889f26a89667a06ca5a0d SHA1 d6e9aed6e45cb964fc5baf7c20a67f597b931da5 SHA256 c5c02f490168e8a781909e3f8812dad23187fa5d105640567b1f0f1747d6fc0d
-MISC ChangeLog 1569 RMD160 b95a127714c994b9eda44c37d8ef5933112ab3f1 SHA1 715d23999efb62543f70ff9fd276c10ce2863d7f SHA256 1098615e366fffa919a21170ce0a1ec585f1441786c5c6963cee50b17d9d5564
+EBUILD kadu-word_fix-0.6.6_beta10.ebuild 296 RMD160 0ffe10e3b10c633ddbad928bf8715e4aafd9c1a2 SHA1 237f039786e813d3f5f61c9ddf88f3c0cf26c62e SHA256 bdaa0f7f8452b7800434e9ba41deac35e35ba6a2b424c7cd8c177586dbe5be0b
+MISC ChangeLog 1710 RMD160 b96441e7ecb91b8677bb1e48545b7d65eaa9f6d2 SHA1 1ccdeb20e67a9eac7b9fad94ddbafa3f47d5beab SHA256 6daa11b2b9c014b03928d32071696c01186e4f0594235c4c542800a49b9942d8
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
