@@ -1,0 +1,14 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+MIN_VER="0.6.6_beta10"
+
+inherit kadu-base kadu-mod
+
+DESCRIPTION="Word replacement module for Kadu"
+HOMEPAGE="http://kadu.net"
+KEYWORDS=""
+IUSE=""
+
+S="${WORKDIR}/kadu-${K_PV}"
