@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*kadu-word_fix-0.6.6_beta10 (09 Nov 2010)
+
+  09 Nov 2010; Michał Ziąbkowski <mziab@o2.pl>
+  +kadu-word_fix-0.6.6_beta10.ebuild:
+  Bumped.
+
 *kadu-word_fix-0.6.5.4 (08 Feb 2010)
 
   08 Feb 2010; Michał Ziąbkowski <mziab@o2.pl>
